# op-rbuilder

./: .gitignore  BLOCK_PERSISTENCE_INVESTIGATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INVESTIGATION.md  Makefile  README.md  cliff.toml  docker-bake.hcl  engine-peers.example.toml  justfile  playground.yaml  release-plz.toml  rust-toolchain.toml
.cargo/: config.toml
.circleci/: config.yml  local-acceptance.yml
.github/workflows/: checks.yaml  checks_docker.yaml  codspeed.yaml  docker_build.yaml  op_rbuilder_checks.yaml  op_rbuilder_release.yaml  op_rbuilder_release_candidate.yaml  release-plz.yaml  release.yaml  reproducible_verify.yaml  tdx_quote_provider.yaml  tdx_quote_provider_checks.yaml  tdx_quote_provider_release.yaml  test_reproducible_docker.yaml
crates/op-rbuilder/: CHANGELOG.md  Cargo.toml
crates/op-rbuilder-test-macros/: Cargo.toml
crates/op-rbuilder/benches/: bench_flashblocks_state_root.rs  test_bench.rs
crates/op-rbuilder/src/: args.rs  evm.rs  execution.rs  generator.rs  ha.rs  hardforks.rs  launcher.rs  lib.rs  main.rs  metrics.rs  mock_tx.rs  monitor_tx_pool.rs  payload_builder.rs  payload_builder_vanilla.rs  pool.rs  presim.rs  revert_protection.rs  runtime_ext.rs  task_ext.rs  traits.rs  tx.rs  tx_signer.rs
crates/op-rbuilder/src/args/: mod.rs  op.rs  playground.rs
crates/op-rbuilder/src/backrun_bundle/: args.rs  global_pool.rs  maintain.rs  metrics.rs  mod.rs  payload_pool.rs  pool.rs  rpc.rs  test_utils.rs
crates/op-rbuilder/src/block_stm/: README.md  captured_reads.rs  db_adapter.rs  executor.rs  mod.rs  mv_hashmap.rs  scheduler.rs  tests.rs  types.rs  view.rs
crates/op-rbuilder/src/block_stm/evm/: custom_evm.rs  exec.rs  handler.rs  lazy_db.rs  mod.rs
crates/op-rbuilder/src/builder/: assembly.rs  best_txs.rs  builder_tx.rs  cancellation.rs  config.rs  context.rs  continuous.rs  flashblocks_builder_tx.rs  generator.rs  mod.rs  payload.rs  payload_handler.rs  presim.rs  receipt.rs  service.rs  state_root.rs  syncer_config.rs  syncer_ctx.rs  timing.rs  wspub.rs
crates/op-rbuilder/src/builder/continuous/: candidate_loop.rs  interval.rs  mod.rs  publish.rs  shared_best.rs  transition.rs  types.rs
crates/op-rbuilder/src/builder/hooks/: channel.rs  metrics.rs  mod.rs  post_seal.rs  ws.rs
crates/op-rbuilder/src/builders/: builder_tx.rs  context.rs  generator.rs  mod.rs  old_standard.rs
crates/op-rbuilder/src/builders/fb_next/: block.rs  builder.rs  context.rs  empty.rs  job.rs  mod.rs  payload.rs  service.rs  wspub.rs
crates/op-rbuilder/src/builders/flashblocks/: best_txs.rs  builder_tx.rs  config.rs  context.rs  ctx.rs  mod.rs  p2p.rs  payload.rs  payload_handler.rs  service.rs  timing.rs  util.rs  wspub.rs
crates/op-rbuilder/src/builders/next/: block.rs  config.rs  empty.rs  job.rs  mod.rs  payload.rs  prologue.rs  service.rs
crates/op-rbuilder/src/builders/standard/: builder_tx.rs  context.rs  mod.rs  payload.rs  service.rs
crates/op-rbuilder/src/flashtestations/: args.rs  attestation.rs  builder_tx.rs  mod.rs  onchain.rs  rpc.rs  service.rs  tx_manager.rs
crates/op-rbuilder/src/flashtestations/abi/: BlockBuilderPolicy.json  FlashtestationRegistry.json
crates/op-rbuilder/src/gas_limiter/: args.rs  mod.rs
crates/op-rbuilder/src/integration/: integration_test.rs  mod.rs  op_rbuilder.rs
crates/op-rbuilder/src/limiter/: args.rs  bucket.rs  compute.rs  error.rs  gas.rs  metrics.rs  mod.rs
crates/op-rbuilder/src/pool/: builder.rs  delegate.rs  metrics.rs  mod.rs  overrides.rs  presim.rs
crates/op-rbuilder/src/primitives/: bundle.rs  mod.rs  telemetry.rs
crates/op-rbuilder/src/primitives/reth/: engine_api_builder.rs  execution.rs  mod.rs  network_builder.rs  transaction_policy.rs
crates/op-rbuilder/src/rules/: args.rs  config.rs  engine.rs  metrics.rs  mod.rs  ordering.rs  payload.rs  score_index.rs  scored_iter.rs  state.rs  types.rs  validator.rs
crates/op-rbuilder/src/rules/registry/: file.rs  mod.rs  remote.rs
crates/op-rbuilder/src/tests/: backrun.rs  continuous_building.rs  data_availability.rs  flashblocks.rs  flashtestations.rs  forks.rs  gas_limiter.rs  incremental_trie.rs  miner_gas_limit.rs  mod.rs  ordering.rs  presim.rs  revert.rs  rules.rs  smoke.rs  tx_gossiping.rs  txpool.rs
crates/op-rbuilder/src/tests/flashblocks/: smoke.rs
crates/op-rbuilder/src/tests/framework/: apis.rs  blocks.rs  chain.rs  driver.rs  external.rs  harness.rs  instance.rs  mod.rs  op.rs  txs.rs  utils.rs
crates/op-rbuilder/src/tests/framework/artifacts/: genesis.json.tmpl
crates/op-rbuilder/src/tests/framework/macros/src/: lib.rs
crates/op-rbuilder/src/tests/macros/: Cargo.toml
crates/op-rbuilder/src/tests/macros/src/: lib.rs
crates/op-rbuilder/src/tests/standard/: data_availability.rs  mod.rs  ordering.rs  revert.rs  smoke.rs  txpool.rs
crates/op-rbuilder/src/tests/vanilla/: data_availability.rs  mod.rs  ordering.rs  revert.rs  smoke.rs  txpool.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: behaviour.rs  lib.rs  outgoing.rs  peers.rs
crates/tdx-quote-provider/: Cargo.toml  Dockerfile
crates/tdx-quote-provider/src/: lib.rs  main.rs  metrics.rs  provider.rs
dev/: README.md  playground.yaml  prometheus.yaml
dev/grafana/: export-dashboard.sh
docs/: TRIE_CACHE_BENCHMARK_REPORT.md  eth_sendBundle.md  flashblocks.md  txpool_policy.md
examples/: example_config.yaml  example_rules.yaml
local-testing/: README.md  playground.yaml  prometheus.yaml  tempo.yaml
local-testing/alloy/: config.alloy
local-testing/chain-monitor/: Dockerfile  entrypoint.sh
local-testing/grafana/: dashboards.yaml  datasources.yaml
local-testing/grafana/dashboards/: op-rbuilder.json
patches/: add-access-lists-to-flashblock-metadata.patch
scripts/: prepare-release.sh
scripts/ci/: circleci_local_acceptance.sh  run_acceptance_tests.sh
tests/: acceptance-tests.yaml
