[workspace.package]
version = "0.4.3-payload-id-fix.1"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/flashbots/op-rbuilder"
repository = "https://github.com/flashbots/op-rbuilder"
exclude = [".github/"]

[workspace]
members = [
    "crates/op-rbuilder",
    "crates/op-rbuilder-test-macros",
    "crates/p2p",
    "crates/tdx-quote-provider"
]
default-members = ["crates/op-rbuilder"]
resolver = "2"

# Speed up compilation time for dev builds by reducing emitted debug info.
# NOTE: Debuggers may provide less useful information with this setting.
# Uncomment this section if you're using a debugger.
[profile.dev]
# https://davidlattimore.github.io/posts/2024/02/04/speeding-up-the-rust-edit-build-run-cycle.html
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Speed up tests.
[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

# Release build with debug symbols and frame pointers for profiling.
# Prefer `make op-rbuilder-profiling` which also sets v0 symbol mangling for cleaner demangling.
# See: https://nnethercote.github.io/perf-book/profiling.html
[profile.profiling]
inherits = "release"
debug = true              # full DWARF debug info (file:line + inlined frames)
strip = false             # preserve symbols
lto = "thin"              # cross-crate inlining without fat-LTO compile cost

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.lints.rust]
unreachable_pub = "deny"

[workspace.lints.clippy]
redundant_clone = "warn"
unused_async = "warn"

[workspace.dependencies]
# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0", default-features = false }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0", default-features = false }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0", default-features = false }
reth-ipc = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0", default-features = false }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-payload-util = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-primitives-traits = { version = "0.1.0", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0", default-features = false }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0", default-features = false }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0", default-features = false }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-tracing-otlp = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v2.0.0" }

# op-reth (moved to ethereum-optimism/optimism repo)
reth-optimism-chainspec = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62", default-features = false }
reth-optimism-cli = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62", default-features = false }
reth-optimism-consensus = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62", default-features = false }
reth-optimism-evm = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62", default-features = false }
reth-optimism-forks = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62", default-features = false }
reth-optimism-node = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62" }
reth-optimism-payload-builder = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62" }
reth-optimism-primitives = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62", default-features = false }
reth-optimism-rpc = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62", features = ["client"] }
reth-optimism-txpool = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62" }

# revm
revm = { version = "36.0.0", features = ["std", "secp256k1", "optional_balance_check"], default-features = false }
op-revm = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62", default-features = false }

# alloy
alloy-consensus = { version = "1.8.2", default-features = false, features = ["kzg"] }
alloy-contract = { version = "1.8.2" }
alloy-eips = { version = "1.8.2" }
alloy-evm = { version = "0.30.0", default-features = false }
alloy-json-rpc = { version = "1.8.2" }
alloy-network = { version = "1.8.2" }
alloy-primitives = { version = "1.5.6", default-features = false, features = ["map-foldhash"] }
alloy-provider = { version = "1.8.2", features = ["ipc", "pubsub", "txpool-api", "engine-api"] }
alloy-rlp = "0.3.13"
alloy-rpc-types = { version = "1.8.2" }
alloy-rpc-types-engine = { version = "1.8.2", features = ["ssz"] }
alloy-rpc-types-eth = { version = "1.8.2" }
alloy-serde = { version = "1.8.2" }
alloy-signer-local = { version = "1.8.2" }
alloy-sol-types = { version = "1.5.6", features = ["json"] }
alloy-transport = { version = "1.8.2" }

# op-alloy
alloy-op-evm = { version = "0.30.0", default-features = false }
alloy-op-hardforks = { version = "0.4.7", default-features = false }
op-alloy-consensus = { version = "0.24.0", default-features = false }
op-alloy-flz = { version = "0.13.1", default-features = false }
op-alloy-network = { version = "0.24.0", default-features = false }
op-alloy-rpc-types = { version = "0.24.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.24.0", default-features = false, features = ["serde"] }

anyhow = "1.0"
async-trait = { version = "0.1.83" }
axum = "0.8.1"
chrono = "0.4"
clap = { version = "4.4.3", features = ["derive", "env", "string"] }
clap_builder = { version = "4.5.19" }
ctor = "0.4.2"
dashmap = "6.1"
derive_more = { version = "2" }
dirs-next = "2.0.0"
dotenvy = "0.15.4"
either = { version = "1.15.0", default-features = false }
eyre = { version = "0.6.12" }
futures = "0.3"
futures-util = "0.3.31"
hex = "0.4"
http = "1.0"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1"] }
hyper-util = "0.1.11"
jsonrpsee = { version = "0.26.0" }
k256 = "0.13.4"
libp2p = { version = "0.56", features = ["identify", "ping", "noise", "tcp", "autonat", "mdns", "tokio", "cbor", "macros", "yamux", "dns"] }
libp2p-stream = "0.4.0-alpha"
metrics = { version = "0.24.1" }
metrics-derive = "0.1"
metrics-exporter-prometheus = { version = "0.17.0", features = ["http-listener"] }
moka = { version = "0.12", features = ["future"] }
multiaddr = "0.18"
nanoid = "0.4"
parking_lot = { version = "0.12.3" }
rand = "0.9.0"
reqwest = { version = "0.12.23" }
rlimit = "0.10"
secp256k1 = { version = "0.30" }
serde = { version = "1.0.210" }
serde_json = { version = "1.0.128" }
serde_with = { version = "3.8.1" }
serde_yaml = "0.9"
sha3 = "0.10"
shellexpand = "3.1"
tempfile = "3.8"
thiserror = { version = "1.0.64" }
time = { version = "0.3.36", features = ["macros", "formatting", "parsing"] }
tokio = { version = "1.44.2", default-features = false }
tokio-metrics = { version = "0.4.7" }
tokio-stream = "0.1.11"
tokio-tungstenite = "0.26.2"
tokio-util = { version = "0.7.4", features = ["codec"] }
tower = "0.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = "2.5.2"
uuid = { version = "1.6.1", features = ["serde", "v4", "v5"] }

# dev dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
testcontainers = "0.27.0"
tikv-jemallocator = { version = "0.6" }
vergen = "9.0.4"
vergen-git2 = "9.0.4"
opentelemetry = { version = "0.31", features = ["trace"] }
tracing-loki = "0.2.6"

# tdx attestation
tdx = { git = "https://github.com/automata-network/tdx-attestation-sdk.git", features = ["configfs"], branch = "main" }

# Unify op-alloy/alloy-op crates so crates.io transitive deps resolve to the same
# git versions used by the ethereum-optimism/optimism repo.
[patch.crates-io]
op-alloy-consensus = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62" }
op-alloy-rpc-types = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62" }
op-alloy-rpc-types-engine = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62" }
op-alloy-rpc-jsonrpsee = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62" }
op-alloy-network = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62" }
alloy-op-evm = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62" }
alloy-op-hardforks = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62" }
op-revm = { git = "https://github.com/flashbots/optimism", rev = "52037363c315e0ec0b73484832be8065dfc16b62" }
