[package]
name = "p2p"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
libp2p.workspace = true
libp2p-stream.workspace = true
multiaddr.workspace = true

derive_more = { workspace = true, features = ["from"] }
eyre.workspace = true
futures.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros"] }
tokio-util = { workspace = true, features = ["compat", "codec"] }
tracing.workspace = true

[lints]
workspace = true
