[package]
name = "tdx-quote-provider"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "TDX quote provider API service"
readme = "README.md"

[dependencies]
axum = { version = "0.8.1" }
thiserror.workspace = true
clap.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full", "signal"] }
eyre.workspace = true
metrics.workspace = true
metrics-derive = "0.1"
serde.workspace = true
serde_json.workspace = true

hex = "0.4.3"
dotenvy = "0.15.4"
metrics-exporter-prometheus = { version = "0.17.0", features = [
    "http-listener",
] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
# TODO: this deps routes to https://github.com/avalonche/tdx-attestation-sdk/tree/avalonche/update-alloy, replace it once https://github.com/automata-network/tdx-attestation-sdk/pull/32 is merged
tdx = { git = "https://github.com/avalonche/tdx-attestation-sdk.git", features = ["configfs"], rev = "edfe4cf572bd4801286056673841546989a5c6ed"}

[dev-dependencies]
reqwest.workspace = true

[[bin]]
name = "tdx-quote-provider"
path = "src/main.rs"

[lib]
name = "tdx_quote_provider"
path = "src/lib.rs"