[package]
name = "tdx-quote-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "TDX quote provider API service"
readme = "README.md"

[lints]
workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
dotenvy.workspace = true
eyre.workspace = true
hex.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
metrics-exporter-prometheus.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true

tdx.workspace = true

[dev-dependencies]
reqwest.workspace = true

[[bin]]
name = "tdx-quote-provider"
path = "src/main.rs"

[lib]
name = "tdx_quote_provider"
path = "src/lib.rs"
